--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gotrue-js": "^0.9.29",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
